fixed scrollbar for win

--- a/src/components/index.css
+++ b/src/components/index.css
@@ -54,9 +54,17 @@ body {
   max-width: 42rem;
   background-color: var(--color-background-500);
   border-radius: 0.9rem;
-  /* overflow: hidden; */
-  overflow: scroll;
+  overflow: auto;
   position: relative;
+}
+
+::-webkit-scrollbar{
+  width: 5px;
+}
+
+::-webkit-scrollbar-thumb{
+  background-color: #888;
+  border-radius: 10px;
 }
 
 .loader {
@@ -139,8 +147,7 @@ body {
 .list {
   list-style: none;
   padding: 0.8rem 0;
-  /* overflow: hidden; */
-  overflow: scroll;
+  overflow: auto;
 }
 
 .list-watched {
